# starknet-pythonic-template

./: .gitignore  LICENSE.txt  README.md  brownie-config.yml  pyproject.toml  setup.cfg  tox.ini
scripts/: deploy.py
src/l1/: Counter.sol
src/l1/interfaces/: ICounter.sol  IStarknetCore.sol
src/starknet/: counter.cairo
tests/: conftest.py
tests/starknet/: test_counter.py
