[metadata]
name = starknet-template
description = A project template for StarkNet applications
author = Francesco Ceccon
author_email = francesco@ceccon.me
license = MIT
long_description = file: README.md
long_description_content_type = text/x-markdown; charset=UTF-8
platforms = any

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.7

install_requries =
    cairo-lang==0.4.2
    eth-brownie>=1.10.0,<2.0.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    tox
    pytest
    hypothesis

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool:isort]
profile = black

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
per_file_ignores =
    # ignore docstrings in tests
    tests/*:D100,D101,D102,D103,D104,D105,D106,D107
